src/test/resources/invalid/InvalidEventName.sc
/* (c) https://github.com/MontiCore/monticore */
statechart InvalidEventName {
  initial state Foo;
  
  event String Bar( String a, int b, a.b.Person p)  ;
}